# moonlight-web-stream

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/: release.yml
.github/workflows/: ci.yml  macos-ci.yml  prepare-release.yml
common/: Cargo.toml
common/src/: api_bindings.rs  config.rs  ipc.rs  lib.rs
docker/: Dockerfile  Dockerfile.prerelease
src/: main.rs  web.rs
src/api/: app.rs  host.rs  mod.rs  role.rs  settings.rs  stream.rs  user.rs
src/app/: host.rs  mod.rs  password.rs  role.rs  user.rs
src/app/storage/: mod.rs
src/app/storage/json/: mod.rs  versions.rs
streamer/: Cargo.toml
streamer/src/: audio.rs  main.rs  video.rs
streamer/src/transport/: mod.rs
streamer/src/transport/web_socket/: mod.rs
streamer/src/transport/webrtc/: audio.rs  mod.rs  video.rs
web/: admin.html  admin.ts  api.ts  default_settings.ts  i18n.ts  index.html  index.ts  stream.html  stream.ts
web/component/: context_menu.ts  input.ts  settings_menu.ts
web/component/game/: index.ts
web/component/host/: add_modal.ts  index.ts
web/component/modal/: form.ts  index.ts  login.ts
web/component/roles/: add_modal.ts  detailed_page.ts  index.ts  list.ts  permissions.ts
web/component/user/: add_modal.ts  detailed_page.ts  index.ts  role_select.ts
web/locales/: en.ts  fr-FR.ts  ko-KR.ts  pt-BR.ts  zh-CN.ts
web/stream/: index.ts  input.ts  video.ts
web/stream/transport/: index.ts  webrtc.ts
web/styles/: index.ts  moonlight.css  standard.css
