[package]
name = "streamer"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true }
common = { workspace = true }

tokio = { workspace = true, features = ["rt-multi-thread"] }
webrtc = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[lints]
workspace = true
